Fix vertical scrollbar issue

--- a/themes/bartoszlegiec/source/css/layout/_header.sass
+++ b/themes/bartoszlegiec/source/css/layout/_header.sass
@@ -92,9 +92,9 @@
     position: fixed
     top: 0
     left: 0
-    width: 100vw
+    width: 100%
     height: 100vh
-    transition: opacity .2s ease-in-out,visibility 0s .2s
+    transition: opacity .2s ease-in-out, visibility 0s .2s
     background: rgba(0,0,0,.3)
     cursor: pointer
     opacity: 0
